objects/Offering_Release_Stage__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Billable_Resource_Cost__c</fullName>
        <label>Actual Billable Resource Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Capital_Expenses__c</fullName>
        <label>Actual Capital Expenses</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Customer_Trial_Cost__c</fullName>
        <label>Actual Customer Trial Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Gross_Margin__c</fullName>
        <label>Actual Gross Margin</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Gross_Percent_Margin__c</fullName>
        <label>Actual Gross Percent Margin</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_Operating_Cash_Flow__c</fullName>
        <label>Actual Operating Cash Flow</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_Operating_Earnings__c</fullName>
        <label>Actual Operating Earnings</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Other_Cost__c</fullName>
        <label>Actual Other Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Revenue__c</fullName>
        <label>Actual Revenue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Total_Funding_Alloc__c</fullName>
        <label>Actual Total Funding Alloc</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Unit_Volume__c</fullName>
        <label>Actual Unit Volume</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allowable_Variance__c</fullName>
        <label>Allowable Variance</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approver10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Offering_Release_Stages8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver11__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 11</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Offering_Release_Stages9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver12__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 12</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Offering_Release_StagesdkhO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billable_Resource_Cost_Var__c</fullName>
        <label>Billable Resource Cost Var</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Case_Assumptions__c</fullName>
        <label>Business Case Assumptions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Capital_Expenses_Variance__c</fullName>
        <label>Capital Expenses Variance</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Customer_Trial_Cost_Variance__c</fullName>
        <label>Customer Trial Cost Variance</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_Margin_Percent_Variance__c</fullName>
        <label>Gross Margin Percent Variance</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_Margin_Variance__c</fullName>
        <label>Gross Margin Variance</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OfferingReleaseStatus__c</fullName>
        <formula>TEXT(Offering_Release_ID__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OfferingReleaseStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering_Name__c</fullName>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offering Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering_Release_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offering Release ID</label>
        <referenceTo>Offering_Release__c</referenceTo>
        <relationshipLabel>Offering Release Stages</relationshipLabel>
        <relationshipName>Offering_Release_Stages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Offering_Release_Name__c</fullName>
        <formula>Offering_Release_ID__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offering Release Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_Cash_Flow_Variance__c</fullName>
        <label>Operating Cash Flow Variance</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Operating_Earnings_Variance__c</fullName>
        <label>Operating Earnings Variance</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_Cost_Variance__c</fullName>
        <label>Other Cost Variance</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PAC__c</fullName>
        <label>PAC</label>
        <picklist>
            <picklistValues>
                <fullName>ABS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITO</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Planned_Billable_Resource_Cost__c</fullName>
        <label>Planned Billable Resource Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Capital_Expenses__c</fullName>
        <label>Planned Capital Expenses</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Customer_Trial_Cost__c</fullName>
        <label>Planned Customer Trial Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Gross_Margin_Percent__c</fullName>
        <label>Planned Gross Margin Percent</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Planned_Gross_Margin__c</fullName>
        <label>Planned Gross Margin</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Operating_Cash_Flow__c</fullName>
        <label>Planned Operating Cash Flow</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Planned_Operating_Earnings__c</fullName>
        <label>Planned Operating Earnings</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Other_Cost__c</fullName>
        <label>Planned Other Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Revenue__c</fullName>
        <label>Planned Revenue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Total_Funding_Alloc__c</fullName>
        <label>Planned Total Funding Alloc</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Unit_Volume__c</fullName>
        <label>Planned Unit Volume</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rel_Billable_Resource_Cost_Var__c</fullName>
        <label>Rel Billable Resource Cost Var</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rel_Capital_Expenses_Var__c</fullName>
        <label>Rel Capital Expenses Var</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rel_Customer_Trial_Cost_Var__c</fullName>
        <label>Rel Customer Trial Cost Var</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rel_Plan_Billable_Resource_Cost__c</fullName>
        <label>Rel Plan Billable Resource Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rel_Plan_Customer_Trial_Cost__c</fullName>
        <label>Rel Plan Customer Trial Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rel_Plan_Total_Funding_Alloc__c</fullName>
        <label>Rel Plan Total Funding Alloc</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rel_Planned_Capital_Expenses__c</fullName>
        <label>Rel Planned Capital Expenses</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rel_Total_Funding_Alloc_Var__c</fullName>
        <label>Rel Total Funding Alloc Var</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_Variance__c</fullName>
        <label>Revenue Variance</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Stage_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Stage ID</label>
        <referenceTo>Stage__c</referenceTo>
        <relationshipLabel>Offering Release Stages</relationshipLabel>
        <relationshipName>Offering_Release_Stages</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage_Name__c</fullName>
        <formula>Stage_ID__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Funding_Allocation_Var__c</fullName>
        <label>Total Funding Allocation Var</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Unit_Volume_Variance__c</fullName>
        <label>Unit Volume Variance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Offering Release Stage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Stage_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Offering_Release_Name__c</columns>
        <columns>Offering_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ORS-{0000}</displayFormat>
        <label>Offering Release Stage ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offering Release Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>